--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "vee-validate": "^4.11.3",
     "vue": "^3.3.4",
     "vue-router": "^4.2.2"
   },
